<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2022 Craig Motlin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>io.liftwizard</groupId>
        <artifactId>liftwizard-parent-build</artifactId>
        <version>2.1.7-SNAPSHOT</version>
        <relativePath>liftwizard-maven-build/liftwizard-parent-build</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>liftwizard</artifactId>
    <packaging>pom</packaging>

    <name>Liftwizard (Root Module Group)</name>

    <modules>
        <module>docs</module>
        <module>liftwizard-application</module>
        <module>liftwizard-auth</module>
        <module>liftwizard-bundle</module>
        <module>liftwizard-clock</module>
        <module>liftwizard-config</module>
        <module>liftwizard-example</module>
        <module>liftwizard-example-resources</module>
        <module>liftwizard-generator-plugins</module>
        <module>liftwizard-graphql</module>
        <module>liftwizard-jackson</module>
        <module>liftwizard-logging</module>
        <module>liftwizard-maven-build</module>
        <module>liftwizard-reladomo</module>
        <module>liftwizard-servlet</module>
        <module>liftwizard-test</module>
        <module>liftwizard-utility</module>
        <module>liftwizard-uuid</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>
        <maven.compiler.parameters>true</maven.compiler.parameters>

        <checkstyle.configuration>${maven.multiModuleProjectDirectory}/checkstyle-configuration.xml</checkstyle.configuration>
        <checkstyle.suppressions>${maven.multiModuleProjectDirectory}/checkstyle-suppressions.xml</checkstyle.suppressions>
        <checkstyle.cache>${project.build.directory}/checkstyle-cache</checkstyle.cache>
    </properties>

    <description>Liftwizard is a collection of bundles and add-ons for Dropwizard, the Java framework for writing web services.</description>

    <url>https://github.com/motlin/liftwizard</url>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/motlin/liftwizard/issues</url>
    </issueManagement>

    <ciManagement>
        <system>GitHub</system>
        <url>https://github.com/motlin/liftwizard/actions</url>
    </ciManagement>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/motlin/liftwizard</url>
        <connection>scm:git:https://github.com/motlin/liftwizard.git</connection>
        <developerConnection>scm:git:https@github.com:motlin/liftwizard.git</developerConnection>
        <tag>HEAD</tag>
  </scm>

    <inceptionYear>2020</inceptionYear>

    <developers>
        <developer>
            <name>Craig Motlin</name>
            <email>cmotlin@gmail.com</email>
            <url>https://github.com/motlin</url>
            <id>motlin</id>
        </developer>
    </developers>

    <build>
        <defaultGoal>clean verify</defaultGoal>

        <pluginManagement>
            <plugins>

                <plugin>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.6.1</version>
                    <executions>

                        <execution>
                            <id>analyze</id>
                            <goals>
                                <goal>analyze-only</goal>
                            </goals>
                            <configuration>
                                <failOnWarning>true</failOnWarning>
                                <ignoredUnusedDeclaredDependencies>
                                    <ignoredUnusedDeclaredDependency>com.google.auto.service:auto-service-annotations</ignoredUnusedDeclaredDependency>
                                    <ignoredUnusedDeclaredDependency>io.liftwizard:liftwizard-logging-buffered-appender</ignoredUnusedDeclaredDependency>
                                    <ignoredUnusedDeclaredDependency>org.eclipse.collections:eclipse-collections</ignoredUnusedDeclaredDependency>
                                </ignoredUnusedDeclaredDependencies>
                            </configuration>
                        </execution>

                    </executions>
                </plugin>

            </plugins>
        </pluginManagement>

    </build>

    <profiles>

        <profile>
            <id>enforcer-strict</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <build>
                <plugins>

                    <plugin>
                        <artifactId>maven-enforcer-plugin</artifactId>
                        <version>3.4.1</version>
                        <executions>
                            <execution>
                                <id>enforce</id>
                                <configuration>
                                    <rules>
                                        <DependencyConvergence />
                                        <requireJavaVersion>
                                            <version>1.8.0</version>
                                        </requireJavaVersion>
                                        <requireMavenVersion>
                                            <version>3.6.3</version>
                                        </requireMavenVersion>
                                        <requirePluginVersions>
                                            <unCheckedPluginList>
                                                io.liftwizard:liftwizard-generator-reladomo-code-plugin,
                                                io.liftwizard:liftwizard-generator-reladomo-database-plugin,
                                                io.liftwizard:liftwizard-generator-xsd2bean-plugin
                                            </unCheckedPluginList>
                                        </requirePluginVersions>
                                        <bannedDependencies>
                                            <excludes>
                                                <exclude>log4j:log4j</exclude>
                                                <exclude>commons-logging-api</exclude>
                                                <exclude>commons-logging</exclude>
                                                <exclude>org.apache.logging.log4j:log4j</exclude>
                                                <exclude>org.slf4j:slf4j-simple</exclude>
                                                <exclude>org.slf4j:slf4j-log4j12</exclude>
                                                <exclude>org.slf4j:slf4j-jdk14</exclude>
                                                <exclude>org.slf4j:nop</exclude>
                                                <exclude>org.slf4j:jcl</exclude>
                                            </excludes>
                                        </bannedDependencies>
                                        <banDuplicatePomDependencyVersions />
                                    </rules>
                                </configuration>
                                <goals>
                                    <goal>enforce</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                </plugins>
            </build>
        </profile>

    </profiles>

</project>
